<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/place_for_images"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_item_main"
    tools:context="com.act.EditAdsActivity">

    <ScrollView
        android:id="@+id/scroll_view_edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/vp_image"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:padding="7dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">


                    </androidx.viewpager2.widget.ViewPager2>

                    <TextView
                        android:id="@+id/image_counter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/elementscolor"
                        android:padding="5dp"
                        android:text="N/A"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/vp_image" />

                    <ProgressBar
                        android:id="@+id/pb_edit"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@+id/vp_image"
                        app:layout_constraintEnd_toEndOf="@+id/vp_image"
                        app:layout_constraintStart_toStartOf="@+id/vp_image"
                        app:layout_constraintTop_toTopOf="@+id/vp_image" />



                    <ImageButton
                        android:id="@+id/b_addedtimage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/buttons_background"
                        android:onClick="onClickGetImages"
                        android:padding="5dp"
                        app:layout_constraintEnd_toEndOf="@+id/vp_image"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_edit" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/ed_title"
                        android:background="@null"
                        android:ems="10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title"
                        android:textColorHint="@color/background_hintitem_main"
                        android:textSize="16sp"
                        android:padding="10dp"
                        android:textAlignment="center"
                        android:textColor="@color/elementscolor"
                        android:textStyle="italic"/>
                    <LinearLayout
                        android:id="@+id/divider8"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="4dp"
                        android:background="@color/elementscolor"
                        android:orientation="horizontal"></LinearLayout>

                    <TextView
                        android:id="@+id/textCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/country"
                        android:textColor="@color/headercolor"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/selectCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/selectcountry"
                        android:textColor="@color/text"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/divider1"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="4dp"
                        android:background="@color/elementscolor"
                        android:orientation="horizontal"></LinearLayout>

                    <TextView
                        android:id="@+id/textCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/city"
                        android:textColor="@color/headercolor"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/selectCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/selectсity"
                        android:textColor="@color/text"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/divider2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="4dp"
                        android:background="@color/elementscolor"
                        android:orientation="horizontal"></LinearLayout>

                    <TextView
                        android:id="@+id/tvTextTel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/tel"
                        android:textColor="@color/headercolor"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/ed_tel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/select_tel"
                        android:inputType="number"
                        android:padding="8dp"
                        android:textColorHint="@color/background_hintitem_main"
                        android:textSize="14sp"
                        android:textStyle="italic" />

                    <LinearLayout
                        android:id="@+id/divider3"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="4dp"
                        android:background="@color/elementscolor"
                        android:orientation="horizontal"></LinearLayout>

                    <TextView
                        android:id="@+id/tvTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/email"
                        android:textColor="@color/headercolor"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/ed_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/select_email"
                        android:inputType="textEmailAddress"
                        android:padding="8dp"
                        android:textColorHint="@color/background_hintitem_main"
                        android:textSize="14sp"
                        android:textStyle="italic" />

                    <LinearLayout
                        android:id="@+id/divider4"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="4dp"
                        android:background="@color/elementscolor"
                        android:orientation="horizontal"></LinearLayout>

                    <TextView
                        android:id="@+id/tvTextEmail2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/index"
                        android:textColor="@color/headercolor"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/ed_index"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/select_index"
                        android:inputType="number"
                        android:padding="8dp"
                        android:textColorHint="@color/background_hintitem_main"
                        android:textSize="14sp"
                        android:textStyle="italic" />

                    <CheckBox
                        android:id="@+id/checkSend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/with_send"
                        android:textColor="@color/text" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textCat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/category"
                        android:textColor="@color/headercolor"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/selectCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/category_select"
                        android:textColor="@color/text"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/divider5"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="4dp"
                        android:background="@color/elementscolor"
                        android:orientation="horizontal"></LinearLayout>

                    <TextView
                        android:id="@+id/textPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/price"
                        android:textColor="@color/headercolor"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/ed_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/select_price"
                        android:inputType="number"
                        android:padding="8dp"
                        android:textColorHint="@color/background_hintitem_main"
                        android:textSize="14sp"
                        android:textStyle="italic" />

                    <LinearLayout
                        android:id="@+id/divider6"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="4dp"
                        android:background="@color/elementscolor"
                        android:orientation="horizontal"></LinearLayout>

                    <TextView
                        android:id="@+id/tvTextDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/describe"
                        android:textColor="@color/headercolor"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/ed_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/describe_1"
                        android:inputType="textPersonName"
                        android:padding="8dp"
                        android:textColorHint="@color/background_hintitem_main"
                        android:textSize="14sp"
                        android:textStyle="italic" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/b_publish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:onClick="onClickPublishPost"
                android:text="@string/save_post"
                android:textColor="@color/white"
                app:backgroundTint="@color/elementscolor" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>