<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/place_for_images"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_item_main"
    tools:context="com.act.EditAdsActivity">

    <ScrollView
        android:id="@+id/scroll_view_edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:id="@+id/card_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/country"
                        android:textColor="@color/headercolor"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/selectCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="OnclickSelectCountry"
                        android:padding="10dp"
                        android:text="@string/selectcountry"
                        android:textColor="@color/text"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/divider1"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="4dp"
                        android:background="@color/elementscolor"
                        android:orientation="horizontal"></LinearLayout>

                    <TextView
                        android:id="@+id/textCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/city"
                        android:textColor="@color/headercolor"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/selectCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="OnclickSelectCity"
                        android:padding="10dp"
                        android:text="@string/selectсity"
                        android:textColor="@color/text"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/divider2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="4dp"
                        android:background="@color/elementscolor"
                        android:orientation="horizontal"></LinearLayout>

                    <TextView
                        android:id="@+id/tvTextEmail2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/index"
                        android:textColor="@color/headercolor"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/ed_index"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/select_index"
                        android:inputType="number"
                        android:padding="8dp"
                        android:textColorHint="@color/background_hintitem_main"
                        android:textSize="14sp"
                        android:textStyle="italic" />

                    <CheckBox
                        android:id="@+id/checkSend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/with_send"
                        android:textColor="@color/text" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/b_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="Применить фильтр"
                android:textColor="@color/white"
                app:backgroundTint="@color/elementscolor" />

            <Button
                android:id="@+id/b_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="Очистить фильтр"
                android:textColor="@color/white"
                app:backgroundTint="@color/elementscolor" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>